--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@
     align-items: center;
 }
 
-#additional ul li > div {
+#additional ul li>div {
     height: 80%;
     display: flex;
     align-items: center;
@@ -80,12 +80,13 @@
 #additional ul li img {
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain; 
+    object-fit: contain;
 }
 
 #additional ul strong {
     margin-right: 3px;
 }
+
 #additional ul p {
     padding-top: 10px;
     height: 20%;
@@ -145,6 +146,7 @@
     display: flex;
     justify-content: end;
 }
+
 #infor-detail li p:nth-child(2) {
     width: 2%;
     font-size: 10px;
@@ -152,14 +154,14 @@
     color: #002265;
     justify-content: center;
 }
+
 #infor-detail li p:nth-child(3) {
     width: 49%;
 }
 
 
 /* contact */
-#contact {
-}
+#contact {}
 
 #contact-title {
     font-size: 17px;
@@ -217,7 +219,7 @@
     justify-content: center;
     align-items: center;
     background-repeat: repeat;
-	background-size: cover; 
+    background-size: cover;
 }
 
 #contact-detail li p:nth-child(2) {
@@ -229,6 +231,7 @@
     color: #14279B;
     transition: all 1s ease;
 }
+
 #contact-detail li a:hover {
     color: #007bff;
     transition: all 1s ease;
@@ -257,30 +260,37 @@
     color: black;
     transition: all 0.5s ease;
 }
+
 .instagram:hover i {
     transition: all 0.5s ease;
-    color: #ff9500 ;
+    color: #ff9500;
 }
+
 .mail:hover i {
     color: #F04235;
     transition: all 0.5s ease;
 }
+
 .phone:hover i {
     color: #00A14F;
     transition: all 0.5s ease;
 }
+
 .facebook:hover i {
     color: #0863F7;
     transition: all 0.5s ease;
 }
+
 .linkedin:hover i {
     color: #0270AD;
     transition: all 0.5s ease;
 }
+
 .twitter:hover i {
     color: #1C96E8;
     transition: all 0.5s ease;
 }
+
 .youtube:hover i {
     color: #F60002;
     transition: all 0.5s ease;
@@ -297,28 +307,30 @@
 
 
 /* education */
-#education > div {
+#education>div {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#education > div > p:nth-child(1) {
+#education>div>p:nth-child(1) {
     display: flex;
     justify-content: end;
     width: 30%;
 }
-#education > div > p:nth-child(1) img {
+
+#education>div>p:nth-child(1) img {
     max-width: 26%;
 }
-#education > div > p:nth-child(2) {
+
+#education>div>p:nth-child(2) {
     width: 60%;
     padding-left: 10px;
     padding-right: 300px;
     font-family: 'Poppins', sans-serif;
 }
 
-#education > div > p:nth-child(2) span:nth-child(1) {
+#education>div>p:nth-child(2) span:nth-child(1) {
     font-size: 18px;
 }
 
@@ -329,7 +341,7 @@
 
 /* work */
 #work {
-margin-top: 20px;
+    margin-top: 20px;
 }
 
 #work-detail {
@@ -349,6 +361,7 @@ margin-top: 20px;
     display: flex;
     justify-content: end;
 }
+
 #work-detail li p:nth-child(2) {
     width: 2%;
     font-size: 10px;
@@ -357,6 +370,7 @@ margin-top: 20px;
     color: #002265;
     justify-content: center;
 }
+
 #work-detail li p:nth-child(3) {
     width: 49%;
 }
@@ -417,7 +431,7 @@ margin-top: 20px;
     width: 100%;
     height: 80%;
 }
-    
+
 #skills ul li p:nth-child(1) img {
     max-width: 100%;
     object-fit: contain;
@@ -466,7 +480,7 @@ margin-top: 20px;
 }
 
 #other div li:hover img {
-    transform: scale(1.2); 
+    transform: scale(1.2);
 }
 
 footer {
@@ -479,7 +493,7 @@ footer p {
     width: 70%;
     text-align: center;
     font-size: 18px;
-    color:#002265;
+    color: #002265;
     font-family: 'Poppins', sans-serif;
 }
 
