--- a/css/timeline.css
+++ b/css/timeline.css
@@ -4,11 +4,14 @@ Primary style
 
 -------------------------------- */
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
-*, *::after, *::before {
+
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
-/* #7b9d6f */ 
+/* #7b9d6f */
 /* green */
 
 html {
@@ -39,15 +42,18 @@ Main Components
   -moz-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
+
 .cd-horizontal-timeline::before {
   /* never visible - this is used in jQuery to check the current MQ */
   content: 'mobile';
   display: none;
 }
+
 .cd-horizontal-timeline.loaded {
   /* show the timeline after events position has been set (using JavaScript) */
   opacity: 1;
 }
+
 .cd-horizontal-timeline .timeline {
   position: relative;
   height: 100px;
@@ -55,13 +61,16 @@ Main Components
   max-width: 800px;
   margin: 0 auto;
 }
+
 .cd-horizontal-timeline .events-wrapper {
   position: relative;
   height: 100%;
   margin: 0 40px;
   overflow: hidden;
 }
-.cd-horizontal-timeline .events-wrapper::after, .cd-horizontal-timeline .events-wrapper::before {
+
+.cd-horizontal-timeline .events-wrapper::after,
+.cd-horizontal-timeline .events-wrapper::before {
   /* these are used to create a shadow effect at the sides of the timeline */
   content: '';
   position: absolute;
@@ -70,16 +79,19 @@ Main Components
   height: 100%;
   width: 20px;
 }
+
 .cd-horizontal-timeline .events-wrapper::before {
   left: 0;
-  background-image: -webkit-linear-gradient( left , #f8f8f8, rgba(248, 248, 248, 0));
+  background-image: -webkit-linear-gradient(left, #f8f8f8, rgba(248, 248, 248, 0));
   background-image: linear-gradient(to right, #f8f8f8, rgba(248, 248, 248, 0));
 }
+
 .cd-horizontal-timeline .events-wrapper::after {
   right: 0;
-  background-image: -webkit-linear-gradient( right , #f8f8f8, rgba(248, 248, 248, 0));
+  background-image: -webkit-linear-gradient(right, #f8f8f8, rgba(248, 248, 248, 0));
   background-image: linear-gradient(to left, #f8f8f8, rgba(248, 248, 248, 0));
 }
+
 .cd-horizontal-timeline .events {
   /* this is the grey line/timeline */
   position: absolute;
@@ -93,6 +105,7 @@ Main Components
   -moz-transition: -moz-transform 0.4s;
   transition: transform 0.4s;
 }
+
 .cd-horizontal-timeline .filling-line {
   /* this is used to create the green line filling the timeline */
   position: absolute;
@@ -116,6 +129,7 @@ Main Components
   -moz-transition: -moz-transform 0.3s;
   transition: transform 0.3s;
 }
+
 .cd-horizontal-timeline .events a {
   position: absolute;
   bottom: 0;
@@ -131,6 +145,7 @@ Main Components
   -o-transform: translateZ(0);
   transform: translateZ(0);
 }
+
 .cd-horizontal-timeline .events a::after {
   /* this is used to create the event spot */
   content: '';
@@ -152,24 +167,30 @@ Main Components
   -moz-transition: background-color 0.3s, border-color 0.3s;
   transition: background-color 0.3s, border-color 0.3s;
 }
+
 .no-touch .cd-horizontal-timeline .events a:hover::after {
   background-color: #007bff;
   border-color: #007bff;
 }
+
 .cd-horizontal-timeline .events a.selected {
   pointer-events: none;
 }
+
 .cd-horizontal-timeline .events a.selected::after {
   background-color: #007bff;
   border-color: #007bff;
 }
+
 .cd-horizontal-timeline .events a.older-event::after {
   border-color: #007bff;
 }
+
 @media only screen and (min-width: 1100px) {
   .cd-horizontal-timeline {
     /* margin: 6em auto; */
   }
+
   .cd-horizontal-timeline::before {
     /* never visible - this is used in jQuery to check the current MQ */
     content: 'desktop';
@@ -200,6 +221,7 @@ Main Components
   -moz-transition: border-color 0.3s;
   transition: border-color 0.3s;
 }
+
 .cd-timeline-navigation a::after {
   /* arrow icon */
   content: '';
@@ -217,6 +239,7 @@ Main Components
   transform: translateX(-50%) translateY(-50%);
   background: url(../img/cd-arrow.svg) no-repeat 0 0;
 }
+
 .cd-timeline-navigation a.prev {
   left: 0;
   -webkit-transform: translateY(-50%) rotate(180deg);
@@ -225,18 +248,23 @@ Main Components
   -o-transform: translateY(-50%) rotate(180deg);
   transform: translateY(-50%) rotate(180deg);
 }
+
 .cd-timeline-navigation a.next {
   right: 0;
 }
+
 .no-touch .cd-timeline-navigation a:hover {
   border-color: #007bff;
 }
+
 .cd-timeline-navigation a.inactive {
   cursor: not-allowed;
 }
+
 .cd-timeline-navigation a.inactive::after {
   background-position: 0 -16px;
 }
+
 .no-touch .cd-timeline-navigation a.inactive:hover {
   border-color: #dfdfdf;
 }
@@ -250,6 +278,7 @@ Main Components
   -moz-transition: height 0.4s;
   transition: height 0.4s;
 }
+
 .cd-horizontal-timeline .events-content li {
   position: absolute;
   z-index: 1;
@@ -270,6 +299,7 @@ Main Components
   -moz-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
 }
+
 .cd-horizontal-timeline .events-content li.selected {
   /* visible event content */
   position: relative;
@@ -281,25 +311,33 @@ Main Components
   -o-transform: translateX(0);
   transform: translateX(0);
 }
-.cd-horizontal-timeline .events-content li.enter-right, .cd-horizontal-timeline .events-content li.leave-right {
+
+.cd-horizontal-timeline .events-content li.enter-right,
+.cd-horizontal-timeline .events-content li.leave-right {
   -webkit-animation-name: cd-enter-right;
   -moz-animation-name: cd-enter-right;
   animation-name: cd-enter-right;
 }
-.cd-horizontal-timeline .events-content li.enter-left, .cd-horizontal-timeline .events-content li.leave-left {
+
+.cd-horizontal-timeline .events-content li.enter-left,
+.cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-name: cd-enter-left;
   -moz-animation-name: cd-enter-left;
   animation-name: cd-enter-left;
 }
-.cd-horizontal-timeline .events-content li.leave-right, .cd-horizontal-timeline .events-content li.leave-left {
+
+.cd-horizontal-timeline .events-content li.leave-right,
+.cd-horizontal-timeline .events-content li.leave-left {
   -webkit-animation-direction: reverse;
   -moz-animation-direction: reverse;
   animation-direction: reverse;
 }
-.cd-horizontal-timeline .events-content li > * {
+
+.cd-horizontal-timeline .events-content li>* {
   max-width: 800px;
   margin: 0 auto;
 }
+
 .cd-horizontal-timeline .events-content h2 {
   font-weight: bold;
   font-size: 2.6rem;
@@ -307,28 +345,36 @@ Main Components
   font-weight: 700;
   line-height: 1.2;
 }
+
 .cd-horizontal-timeline .events-content em {
   display: block;
   font-style: italic;
   margin: 10px auto;
 }
+
 .cd-horizontal-timeline .events-content em::before {
   content: '- ';
 }
+
 .cd-horizontal-timeline .events-content p {
   font-size: 1.4rem;
   color: #959595;
 }
-.cd-horizontal-timeline .events-content em, .cd-horizontal-timeline .events-content p {
+
+.cd-horizontal-timeline .events-content em,
+.cd-horizontal-timeline .events-content p {
   line-height: 1.6;
 }
+
 @media only screen and (min-width: 768px) {
   .cd-horizontal-timeline .events-content h2 {
     font-size: 7rem;
   }
+
   .cd-horizontal-timeline .events-content em {
     font-size: 2rem;
   }
+
   .cd-horizontal-timeline .events-content p {
     font-size: 1.8rem;
   }
@@ -339,21 +385,25 @@ Main Components
     opacity: 0;
     -webkit-transform: translateX(100%);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0%);
   }
 }
+
 @-moz-keyframes cd-enter-right {
   0% {
     opacity: 0;
     -moz-transform: translateX(100%);
   }
+
   100% {
     opacity: 1;
     -moz-transform: translateX(0%);
   }
 }
+
 @keyframes cd-enter-right {
   0% {
     opacity: 0;
@@ -363,6 +413,7 @@ Main Components
     -o-transform: translateX(100%);
     transform: translateX(100%);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0%);
@@ -372,26 +423,31 @@ Main Components
     transform: translateX(0%);
   }
 }
+
 @-webkit-keyframes cd-enter-left {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-100%);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0%);
   }
 }
+
 @-moz-keyframes cd-enter-left {
   0% {
     opacity: 0;
     -moz-transform: translateX(-100%);
   }
+
   100% {
     opacity: 1;
     -moz-transform: translateX(0%);
   }
 }
+
 @keyframes cd-enter-left {
   0% {
     opacity: 0;
@@ -401,6 +457,7 @@ Main Components
     -o-transform: translateX(-100%);
     transform: translateX(-100%);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: translateX(0%);
